--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,14 +15,12 @@ body{
     margin-top: 3rem;
 
 }
-.row-margin{
-    margin-bottom: 2rem;
-}
+
 .columna{
     width: 100%;
-    height: 15rem;
     border: 20px solid white;
     border-radius:2rem;
+    margin:0 0 2rem 0;
 }
 
 .danger{
