--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,13 +25,15 @@ body{
 }
 .popup{
     opacity: 0;
-    width: 5rem;
-    height: 6rem;
+   /* width: 5rem;
+    height: 6rem;*/
     position: absolute;
     background-color: rgba(0, 0, 0, 0.479);
-    transform: translate(286%,60%);
+    transform: translate(156%,38%);
     transition:.3s;
     border-radius:.3rem;
+    box-sizing: border-box;
+    padding:0 .5rem 0 0;
     
 }
 .popup-hover{
@@ -39,7 +41,7 @@ body{
 }
 li{
     list-style: none;
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin-left:.5rem;
     color:white;
     font-weight: bold;
